[PLFM-9682] Swap to typed top level SearchQuery and improve test coverage